--- a/test.css
+++ b/test.css
@@ -2,39 +2,27 @@
     color: #EDE8DF;
     background-color: #393214;
     display: flex;
-    flex-direction: column; /* Arrange children vertically */
-    align-items: center; /* Center items horizontally */
-    padding: 10px;
+    justify-content: space-around; 
+    align-items: flex-start; /* Align items to the top */
+    padding: 20px;
+}
+
+.footerStyle div {
+    text-align: center; /* Center align the contents of each div */
 }
 
 .footerStyle h1,
 .footerStyle h2 {
     font-size: 25px;
-    margin: 0;
-    text-align: center;
+    margin-bottom: 10px; /* Add some space between the headings and the content */
 }
 
-.footerStyle .links {
+.footerStyle h1 {
+    margin-right: 20x; /* Adjust the margin between the headings (doesn't work?) */
+}
+
+.heading-container {
     display: flex;
-    flex-direction: column; /* Arrange child divs vertically */
-    align-items: center; /* Center child divs horizontally */
-    margin-top: 10px; /* Add space between headings and links */
-}
-
-.footerStyle .links .vertical-links {
-    display: flex;
-    flex-direction: column; /* Arrange links vertically */
-    align-items: center; /* Center links horizontally */
-}
-
-.footerStyle .links .horizontal-links {
-    display: flex;
-    justify-content: center; /* Arrange links horizontally */
-    margin-top: 10px; /* Add space between vertical and horizontal links */
-}
-
-.footerStyle .links a {
-    margin: 5px; /* Adjust margin between links */
-    text-decoration: none; /* Remove underline */
-    color: inherit; /* Inherit color from parent */
+    flex-direction: column;
+    align-items: center;
 }
