--- a/main.css
+++ b/main.css
@@ -1,3 +1,29 @@
+@media only screen and (max-width: 1280px) {    /*When the screen is below 1280px wide the font size and padding is reduced and the image is removed*/
+  .navBar a{
+    font-size: 15px;
+    padding: 20px;
+  }
+  .image-container img{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 720px) { /*When the screen width is below 720px (around the width of a mobile phone) the navbar will disapear and the media queury below will bring in the hamburger*/
+  .navBar{
+    display:none;
+  }
+  .image-container img{
+        display: none;
+    }
+}
+
+@media only screen and (min-width:720px){
+    .hamburger{
+        display:none;
+    }
+}
+
+
 *{
     margin: 0px;
     padding: 0px;
@@ -5,18 +31,18 @@
 
 body{
     min-height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #6e6d24;
 }
 
 .navBar{
-    background-color: #6e6d24;
+    background-color:#393214;
     box-shadow: 3px 3px 3px rgba(0,0,0,0.2);
 }
 .navBar ul{
      width: 100%;
      font-family: Tahoma, sans-serif;
      font-size: 20px;
-     color: #0f0f0f;
+     
      list-style-type: none;
      overflow: hidden;
      display: flex;
@@ -36,6 +62,7 @@ body{
     text-decoration: none;
     display: flex;
     align-items: center;
+    color: #f0f0f0;
 }
 
 .navBar a:hover{
@@ -53,11 +80,45 @@ nav li:first-child{
   object-fit: cover; /* Cover the container without losing aspect ratio */
 }
 
+
+.hamburger{
+  overflow: hidden;
+  background-color:#959595;
+  position: relative;
+    
+}
+
+.hamburger a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.hamburger a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.hamburger #navLinks{
+    display: none;
+}
+
+.active {
+  background-color: #393214;
+  color: white;
+}
+
 .title{
     display: flex;
     justify-content: center;
     align-content: center;
-    background-color: #f0f0f0;
+    background-color: #6e6d24;
+    margin-bottom: 0;
 }
 .title h1{
     font-family: Tahoma,sans-serif;
